Minor bugfixes/whitespace adjustments

--- a/app/assets/stylesheets/twitter/bootstrap/_mixins.scss
+++ b/app/assets/stylesheets/twitter/bootstrap/_mixins.scss
@@ -229,6 +229,8 @@
 // GRADIENTS
 // --------------------------------------------------
 
+
+
 // Horizontal gradient, from left to right
 //
 // Creates two color stops, start and end, by specifying a color and position for each color stop.
@@ -256,7 +258,6 @@
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{ie-hex-str($start-color)}, endColorstr=#{ie-hex-str($end-color)}, GradientType=0); // IE9 and down
 }
-
 @mixin gradient-directional($start-color: #555, $end-color: #333, $deg: 45deg) {
   background-color: $end-color;
   background-repeat: repeat-x;
@@ -273,7 +274,6 @@
   background-repeat: no-repeat;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{ie-hex-str($start-color)}, endColorstr=#{ie-hex-str($end-color)}, GradientType=1); // IE9 and down, gets no color-stop at all for proper fallback
 }
-
 @mixin gradient-vertical-three-colors($start-color: #00b3ee, $mid-color: #7a43b6, $color-stop: 50%, $end-color: #c3325f) {
   background-color: mix($mid-color, $end-color, 80%);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from($start-color), color-stop($color-stop, $mid-color), to($end-color));
@@ -299,12 +299,13 @@
   background-image: linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent);
 }
 
+
 // Reset filters for IE
 //
 // When you need to remove a gradient background, don't forget to use this to reset
 // the IE filter for IE9 and below.
 @mixin reset-filter() {
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
 
 
@@ -314,7 +315,7 @@
 
 // Short retina mixin for setting background-image and -size
 @mixin img-retina($file-1x, $file-2x, $width-1x, $height-1x) {
-  background-image: url("${file-1x}");
+  background-image: url("$file-1x");
 
   @media
   only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -323,7 +324,7 @@
   only screen and (        min-device-pixel-ratio: 2),
   only screen and (                min-resolution: 192dpi),
   only screen and (                min-resolution: 2dppx) {
-    background-image: url("${file-2x}");
+    background-image: url("$file-2x");
     background-size: $width-1x $height-1x;
   }
 }
@@ -421,18 +422,14 @@
 // -------------------------
 // More easily include all the states for responsive-utilities.less.
 @mixin responsive-visibility($class-name) {
-  .#{$class-name} {
-    display: block !important;
-  }
+  .#{$class-name} { display: block !important; }
   tr.#{$class-name} { display: table-row !important; }
   th.#{$class-name},
   td.#{$class-name} { display: table-cell !important; }
 }
 
 @mixin responsive-invisibility($class-name) {
-  .#{$class-name} {
-    display: none !important;
-  }
+  .#{$class-name} { display: none !important; }
   tr.#{$class-name} { display: none !important; }
   th.#{$class-name},
   td.#{$class-name} { display: none !important; }
@@ -515,6 +512,7 @@
   }
 }
 
+
 // Form validation states
 //
 // Used in forms.less to generate the form validation CSS for warnings, errors,
@@ -533,7 +531,8 @@
     @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
     &:focus {
       border-color: darken($border-color, 10%);
-      @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%));
+      $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
+      @include box-shadow($shadow);
     }
   }
   // Set validation states also for addons
