--- a/app/assets/stylesheets/twitter/bootstrap/_modals.scss
+++ b/app/assets/stylesheets/twitter/bootstrap/_modals.scss
@@ -29,7 +29,7 @@
     @include translate(0, -25%);
     @include transition-transform(0.3s ease-out);
   }
-  &.fade.in  .modal-dialog { @include translate(0, 0); }
+  &.fade.in  .modal-dialog { @include translate(0, 0)}
 }
 
 // Shell div to position the modal with bottom padding
